<resources>
    <string name="app_name">SchoolMobile</string>
    <string name="SchoolMobile">SchoolMobile</string>
    <string name="chat">Chat</string>
    <string name="ementa">Ementa</string>
    <string name="mensagens">Mensagens</string>
    <string name="hor_rio">Horário</string>
    <string name="segunda">Segunda</string>
    <string name="ter_a">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="portugu_s_a">Português A</string>
    <string name="biologia">Biologia</string>
    <string name="geologia">Geologia</string>
    <string name="e_fisica">E. Fisica</string>
    <string name="matem_tica_a">Matemática A</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="docente">Docente</string>
    <string name="gabinete">Gabinete</string>
    <string name="nome">Nome</string>
    <string name="mail">Mail</string>
    <string name="gab">Gab.</string>
    <string name="faltas">Faltas</string>
    <string name="justificadas">Justificada</string>
    <string name="injustificadas">Injustificada</string>
    <string name="de_material">De Material</string>
    <string name="disciplinares">Disciplinar</string>
    <string name="documentos">Documentos</string>
    <string name="introdu_o"><u>Introdução</u></string>
    <string name="pesquisar_pessoa">Pesquisar pessoa</string>
    <string name="ultima">Última:</string>
    <string name="mensagem_a_escrever">Mensagem a escrever</string>
    <string name="_8_30">8:30</string>
    <string name="_9_15">9:15</string>
    <string name="_10_00">10:00</string>
    <string name="_10_20">10:20</string>
    <string name="login">Login</string>
    <string name="aluno">Aluno</string>
    <string name="m_faltas">Marcar Faltas</string>
    <string name="sumario">Sumários</string>
    <string name="turmas">Turmas</string>
    <string name="title_activity_aulas">Aulas</string>
    <string name="envio_turma">Enviar mensagem à turma</string>
    <string name="alunos">Alunos</string>
    <string name="destinatario">Destinatário</string>

</resources>
