<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_frame"
    tools:context=".LoginPage">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/app_tittle"
        style="@style/TopBarText"
        android:layout_marginEnd="24dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.794"
        tools:ignore="MissingConstraints" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="88dp">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,NotSibling">

            <TableRow style="@style/TableRowButton">

                <Button
                    android:id="@+id/btw_portugues"
                    style="@style/OtherButtonMenu"
                    android:onClick="go_to_Aluno"
                    android:text="@string/aluno" />
            </TableRow>

            <TableRow
                style="@style/TableRowButton"
                android:paddingTop="30dp">

                <Button
                    android:id="@+id/btw_biologia"
                    style="@style/OtherButtonMenu"
                    android:onClick="go_to_Docente"
                    android:text="@string/docente" />
            </TableRow>


        </TableLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>